style: index. fix top for hero-promo-wrap on laptop

--- a/src/assets/styles/pages/index.scss
+++ b/src/assets/styles/pages/index.scss
@@ -243,7 +243,7 @@
   }
 
   @include laptop {
-    top: 190px;
+    top: 148px;
     gap: 4px;
   }
 }
